New UI Implementation Progress

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -126,6 +126,7 @@ GameScreenshotSaveDirectory=(Path="Screenshots/")
 
 +ActiveGameNameRedirects=(OldGameName="TP_HandheldARBP",NewGameName="/Script/ARTest")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_HandheldARBP",NewGameName="/Script/ARTest")
+SubtitleFontName=/Engine/EngineFonts/Roboto.Roboto
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 Orientation=Sensor
