Project Handover Fixes

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -135,6 +135,7 @@ TargetSDKVersion=29
 bSupportsVulkan=false
 PackageName=com.UlsterUniversity.[PROJECT]
 bPackageDataInsideApk=True
+bShowLaunchImage=False
 
 [/Script/OculusHMD.OculusHMDRuntimeSettings]
 bAutoEnabled=True
