Changes + New Package File to Check

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -133,9 +133,10 @@ Orientation=Sensor
 MinSDKVersion=28
 TargetSDKVersion=29
 bSupportsVulkan=false
-PackageName=com.UlsterUniversity.[PROJECT]
+PackageName=com.EpicGames.AndroidQuickStart
 bPackageDataInsideApk=True
 bShowLaunchImage=False
+bDisableVerifyOBBOnStartUp=True
 
 [/Script/OculusHMD.OculusHMDRuntimeSettings]
 bAutoEnabled=True
