Changed the Navigation for Reader and Audio Menu

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -130,13 +130,14 @@ SubtitleFontName=/Engine/EngineFonts/Roboto.Roboto
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 Orientation=Sensor
-MinSDKVersion=28
-TargetSDKVersion=29
+MinSDKVersion=26
+TargetSDKVersion=32
 bSupportsVulkan=false
 PackageName=com.EpicGames.AndroidQuickStart
 bPackageDataInsideApk=True
 bShowLaunchImage=False
 bDisableVerifyOBBOnStartUp=True
+bForceCompressNativeLibs=True
 
 [/Script/OculusHMD.OculusHMDRuntimeSettings]
 bAutoEnabled=True
