--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -129,7 +129,7 @@ GameScreenshotSaveDirectory=(Path="Screenshots/")
 SubtitleFontName=/Engine/EngineFonts/Roboto.Roboto
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-Orientation=Sensor
+Orientation=Portrait
 MinSDKVersion=26
 TargetSDKVersion=32
 bSupportsVulkan=false
