--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -7,8 +7,6 @@ bSupportAR=True
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
-LaunchOnTarget=
-StagingDirectory=(Path="")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -51,6 +49,7 @@ InternationalizationPreset=All
 -CulturesToStage=en
 +CulturesToStage=en
 +CulturesToStage=ga-IE
++CulturesToStage=fr
 LocalizationTargetCatchAllChunkId=0
 bCookAll=False
 bCookMapsOnly=False
@@ -100,9 +99,6 @@ bSkipMovies=False
 +DirectoriesToAlwaysCook=(Path="/Interchange/Materials")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Pipelines")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Utilities")
-PerPlatformBuildConfig=()
-PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
-PerPlatformBuildTarget=()
 
 [StartupActions]
 bAddPacks=True
