--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -168,7 +168,8 @@ bBundleDensitySplit=True
 ExtraApplicationSettings=
 ExtraActivitySettings=
 +ExtraPermissions=android.permission.QUERY_ALL_PACKAGES
-bAndroidVoiceEnabled=False
++ExtraPermissions=android.permission.CAMERA
+bAndroidVoiceEnabled=True
 bEnableMulticastSupport=False
 bPackageForMetaQuest=False
 bRemoveOSIG=False
